# whisper-type

./: .gitignore  README.md  README_linux.md  README_windows.md  pyproject.toml  requirements.txt  requirements_linux.txt  requirements_windows.txt  whispertype.py
whispertype/: __main__.py  config.py  recorder.py
whispertype/audio/: linux.py  windows.py
whispertype/paste/: linux.py  windows.py
